--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografía Artesanal - Newsletter</title>
+    <title>Fotografía Artesanal </title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
 
 <header>
     <h1>Fotografía Artesanal</h1>
-    <p>Newsletter</p>
+    
 </header>
     <nav>
         <a href="#seccion1">Artesanal</a>
@@ -73,7 +73,7 @@
 <main>
     <section id="seccion1">
         <h2>Bienvenidos a la Fotografía Artesanal</h2>
-        <p>Descubre el encanto de la fotografía artesanal, una práctica que combina creatividad, paciencia y técnicas tradicionales para capturar la belleza del mundo que nos rodea. En este número, exploraremos diferentes aspectos de esta fascinante forma de arte.</p>
+        <p>Descubre el encanto de la fotografía artesanal, una práctica que combina creatividad, paciencia y técnicas tradicionales para capturar la belleza del mundo que nos rodea. , exploraremos diferentes aspectos de esta fascinante forma de arte.</p>
     </section>
 
     <section id="seccion2">
@@ -123,6 +123,8 @@
             <div class="social-links">
                 <a href="https://www.myspaceneo.com" target="_blank">MySpaceNeo</a>
                 <a href="https://www.galaticsocial.com" target="_blank">Galatic Social</a>
+              <a href="https://www.youtube.com/@elfotografoartesanal" target="_blank">Youtobe</a>
+
             </div>
         </section>
 
